2003-04-25  Richard Henderson  <rth@redhat.com>

	* config/ia64/ia64.c (ia64_compute_frame_size): Allow inline asm
	to clobber ar.pfs and ar.unat.
	(ia64_expand_prologue): Force alloc instruction if ar.pfs saved;
	fix test for spilling ar.pfs to the stack.

2003-10-26  Jakub Jelinek  <jakub@redhat.com>
	    Jan Hubicka  <jh@suse.cz>

	* reload1.c (struct elim_table): Change offset, initial_offset and
	previous_offset fields to HOST_WIDE_INT.
	(offsets_at): Change from int to HOST_WIDE_INT.
	(reload): Adjust offsets_at initialization.
	(eliminate_regs_in_insn): Change type of offset to HOST_WIDE_INT.
	(verify_initial_elim_offsets): Change type of t to HOST_WIDE_INT.
	* config/i386/i386.c (ix86_compute_frame_layout): Change offset type
	to HOST_WIDE_INT.
	(pro_epilogue_adjust_stack): New function.
	(ix86_expand_epilogue): Use it.
	(ix86_expand_prologue): Use it.  Don't save regs using mov for huge
	frame sizes if TARGET_64BIT.
	* config/i386/i386.md (pro_epilogue_adjust_stack): Remove.
	(pro_epilogue_adjust_stack_1): Remove * in front of name.
	(pro_epilogue_adjust_stack_rex64): Handle -2147483648 properly.
	(pro_epilogue_adjust_stack_rex64_2): New insn.

	* config/i386/i386.c (ix86_expand_epilogue): Fix comment typo.

2003-01-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* function.c (assign_stack_temp_for_type): Avoid signed/unsigned
	warning.

2003-10-22  Jakub Jelinek  <jakub@redhat.com>

	* final.c (end_final): Change size and rounded to unsigned
	HOST_WIDE_INT.
	* config/1750a/1750a.h (ASM_OUTPUT_SKIP, ASM_OUTPUT_COMMON,
	ASM_OUTPUT_LOCAL): Cast SIZE, ROUNDED, NBYTES to int.
	* config/a29k/a29k.h (ASM_OUTPUT_SKIP, ASM_OUTPUT_COMMON,
	ASM_OUTPUT_LOCAL): Likewise.
	* config/clipper/clipper.h (ASM_OUTPUT_SKIP,
	ASM_OUTPUT_ALIGNED_LOCAL): Likewise.
	* config/convex/convex.h (ASM_OUTPUT_SKIP, ASM_OUTPUT_COMMON,
	ASM_OUTPUT_LOCAL): Likewise.
	* config/d30v/d30v.h (ASM_OUTPUT_SKIP): Likewise.
	* config/elxsi/elxsi.h (ASM_OUTPUT_SKIP, ASM_OUTPUT_COMMON,