@@ -1,3 +1,7 @@
+2003-06-07  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/linux64.h (CRT_CALL_STATIC_FUNCTION): Define.
+
 2003-04-25  Richard Henderson  <rth@redhat.com>
 
 	* config/ia64/ia64.c (ia64_compute_frame_size): Allow inline asm
